add meetups to index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="ui/public/stylesheets/header.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="ui/public/stylesheets/meetup.css" />
     <!-- <script src="main.js"></script> -->
 </head>
 
@@ -40,12 +41,48 @@
             <h1> Crowdsource Questions for a meetup </h1>
             <h2> Prioritize questions to be answered</h2>
             <p>Let every meetup be worth it.</p>
-            <a class="button" href="#">Try now</a>
+            <a class="button" href="index.html#content">Try now</a>
         </div>
     </section>
     <!-- End of hero -->
-    <main>
 
+    <main id="content">
+        <div class="card">
+            <h2>great day</h2>
+            <p>Using color to add meaning only provides a visual indication.</p>
+        </div>
+        <div class="card">
+            <h2>good day</h2>
+            <p>which will not be conveyed to users of assistive technologies.</p>
+        </div>
+        <div class="card">
+            <h2>good friend</h2>
+            <p>In need of a button, but not the hefty background colors they bring?</p>
+        </div>
+        <div class="card">
+            <h2>How are you</h2>
+            <p>Using color to add meaning only provides a visual indication.</p>
+        </div>
+        <div class="card">
+            <h2>I am fine</h2>
+            <p>which will not be conveyed to users of assistive technologies.</p>
+        </div>
+        <div class="card">
+            <h2>Sing well</h2>
+            <p>In need of a button, but not the hefty background colors they bring?</p>
+        </div>
+        <div class="card">
+            <h2>congratulate her</h2>
+            <p>Using color to add meaning only provides a visual indication.</p>
+        </div>
+        <div class="card">
+            <h2>Greet them</h2>
+            <p>which will not be conveyed to users of assistive technologies.</p>
+        </div>
+        <div class="card">
+            <h2>Go ahead</h2>
+            <p>In need of a button, but not the hefty background colors they bring?</p>
+        </div>
     </main>
 </body>
 
