add form.css and utils.css

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="ui/public/stylesheets/header.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="ui/public/stylesheets/meetup.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="ui/public/stylesheets/form.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="ui/public/stylesheets/utils.css" />
+
+
     <!-- <script src="main.js"></script> -->
 </head>
 
@@ -27,7 +31,7 @@
 
                     <li class="menu-item" id="create-meetup"><a href="#">create meetup</a></li>
                     <li class="menu-item" id="scout"><a href="#">scout </a></li>
-                    <li class="menu-item" id="signup"><a href="#">signup</a></li>
+                    <li class="menu-item" id="signup"><a href="ui/signup.html">signup</a></li>
 
                 </div>
             </ul>
