--- a/ui/signup.html
+++ b/ui/signup.html
@@ -6,12 +6,72 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="main.js"></script>
+    <link rel="stylesheet" type="text/css" media="screen" href="public/stylesheets/header.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="public/stylesheets/meetup.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="public/stylesheets/form.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="public/stylesheets/utils.css" />
+
+    <!-- <script src="main.js"></script> -->
+    <!-- internal css -->
+    <style>
+        body {
+            background-color: rgba(63, 63, 70, 0.336);
+        }
+    </style>
 </head>
 
 <body>
+    <!-- Nav-bar -->
+    <header>
+        <nav>
+            <ul>
+                <div id="container">
 
+                    <li class="menu-item">
+                        <a href="../index.html" id="logo">Questioner</a>
+                    </li>
+                    <li class="menu-item" id="search">
+                        <input type="text" size="40" class="search-input" placeholder="search...">
+                    </li>
+
+                    <li class="menu-item" id="create-meetup"><a href="#">create meetup</a></li>
+                    <li class="menu-item" id="scout"><a href="#">scout </a></li>
+                    <li class="menu-item" id="signup"><a href="ui/signup.html">signup</a></li>
+
+                </div>
+            </ul>
+        </nav>
+    </header>
+    <!-- End of Nav-bar -->
+
+    <div class="row">
+        <div class="column-md-3">
+
+        </div>
+        <!-- Signup forms -->
+
+        <div class="column-md-3" id="signupform">
+            <h2>Sign Up</h2>
+            <a class="btn-lg" href="#">Connect with Facebook</a>
+            <a class="btn-lg" href="#">Connect with Google </a>
+            <form>
+                <fieldset>
+                    <legend>Email </legend>
+                    <input type="email" size="30" placeholder="Email Address" required/>
+                    <input type="password" size="30" placeholder="Password" required/>
+                    <button id="signbutton">submit</button>
+                </fieldset>
+                <a class="link" href="#">sign in</a>
+                <a class="link" href="#">reset password</a>
+            </form>
+
+        </div>
+
+        <!-- end of sign up forms -->
+        <div class="column-md-3">
+
+        </div>
+    </div>
 </body>
 
 </html>
