add styling to facebook and google buttons

--- a/ui/signup.html
+++ b/ui/signup.html
@@ -52,8 +52,8 @@
 
         <div class="column-md-3" id="signupform">
             <h2>Sign Up</h2>
-            <a class="btn-lg" href="#">Connect with Facebook</a>
-            <a class="btn-lg" href="#">Connect with Google </a>
+            <a class="btn-lg" id="facebook-link" href="#">Connect with Facebook</a>
+            <a class="btn-lg" id="google-link" href="#">Connect with Google </a>
             <form>
                 <fieldset>
                     <legend>Email </legend>
