add log in page

--- a/ui/signin.html
+++ b/ui/signin.html
@@ -51,7 +51,7 @@
         <!-- Signup forms -->
 
         <div class="column-md-3" id="signupform">
-            <h2>Sign Up</h2>
+            <h2>Log In</h2>
             <a class="btn-lg" id="facebook-link" href="#">Connect with Facebook</a>
             <a class="btn-lg" id="google-link" href="#">Connect with Google </a>
             <form>
@@ -61,7 +61,7 @@
                     <input type="password" size="30" placeholder="Password" required/>
                     <button id="signbutton">submit</button>
                 </fieldset>
-                <a class="link" href="signin.html">log in</a>
+                <a class="link" href="signup.html">sign up</a>
                 <a class="link" href="#">reset password</a>
             </form>
 
