edit sign in title on sigin in form

--- a/ui/signin.html
+++ b/ui/signin.html
@@ -51,7 +51,7 @@
         <!-- Signup forms -->
 
         <div class="column-md-3" id="signupform">
-            <h2>Log In</h2>
+            <h2>Sign In</h2>
             <a class="btn-lg" id="facebook-link" href="#">Connect with Facebook</a>
             <a class="btn-lg" id="google-link" href="#">Connect with Google </a>
             <form>
