--- a/ui/signup.html
+++ b/ui/signup.html
@@ -61,7 +61,7 @@
                     <input type="password" size="30" placeholder="Password" required/>
                     <button id="signbutton">submit</button>
                 </fieldset>
-                <a class="link" href="signin.html">log in</a>
+                <a class="link" href="signin.html">sign in</a>
                 <a class="link" href="#">reset password</a>
             </form>
 
