[starts #162661683]add login page.

--- a/ui/signup.html
+++ b/ui/signup.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="public/stylesheets/form.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="public/stylesheets/utils.css" />
 
+
     <!-- <script src="main.js"></script> -->
     <!-- internal css -->
     <style>
@@ -36,7 +37,7 @@
 
                     <li class="menu-item" id="create-meetup"><a href="#">create meetup</a></li>
                     <li class="menu-item" id="scout"><a href="#">scout </a></li>
-                    <li class="menu-item" id="signup"><a href="ui/signup.html">signup</a></li>
+                    <li class="menu-item" id="signup"><a href="#">signup</a></li>
 
                 </div>
             </ul>
@@ -59,7 +60,7 @@
                     <legend>Email </legend>
                     <input type="email" size="30" placeholder="Email Address" required/>
                     <input type="password" size="30" placeholder="Password" required/>
-                    <button id="signbutton">submit</button>
+                    <a href="profile.html"> <button id="signbutton">submit</button></a>
                 </fieldset>
                 <a class="link" href="signin.html">sign in</a>
                 <a class="link" href="#">reset password</a>
