--- a/ui/signin.html
+++ b/ui/signin.html
@@ -36,7 +36,7 @@
 
                     <li class="menu-item" id="create-meetup"><a href="#">create meetup</a></li>
                     <li class="menu-item" id="scout"><a href="#">scout </a></li>
-                    <li class="menu-item" id="signup"><a href="ui/signup.html">signup</a></li>
+                    <li class="menu-item" id="signup"><a href="signup.html">signup</a></li>
 
                 </div>
             </ul>
@@ -59,7 +59,7 @@
                     <legend>Email </legend>
                     <input type="email" size="30" placeholder="Email Address" required/>
                     <input type="password" size="30" placeholder="Password" required/>
-                    <button id="signbutton">submit</button>
+                    <a href="profile.html"> <button id="signbutton">submit</button></a>
                 </fieldset>
                 <a class="link" href="signup.html">sign up</a>
                 <a class="link" href="#">reset password</a>
