[starts #162661812] add page for creating new meetup

--- a/ui/signin.html
+++ b/ui/signin.html
@@ -34,7 +34,7 @@
                         <input type="text" size="40" class="search-input" placeholder="search...">
                     </li>
 
-                    <li class="menu-item" id="create-meetup"><a href="#">create meetup</a></li>
+                    <li class="menu-item" id="create-meetup"><a href="newmeetup.html">create meetup</a></li>
                     <li class="menu-item" id="scout"><a href="#">scout </a></li>
                     <li class="menu-item" id="signup"><a href="signup.html">signup</a></li>
 
