--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <input type="text" size="40" class="search-input" placeholder="search...">
                     </li>
 
-                    <li class="menu-item" id="create-meetup"><a href="#">create meetup</a></li>
+                    <li class="menu-item" id="create-meetup"><a href="newmeetup.html">create meetup</a></li>
                     <li class="menu-item" id="scout"><a href="#">scout </a></li>
                     <li class="menu-item" id="signup"><a href="ui/signup.html">signup</a></li>
 
