--- a/ui/signup.html
+++ b/ui/signup.html
@@ -35,7 +35,7 @@
                         <input type="text" size="40" class="search-input" placeholder="search...">
                     </li>
 
-                    <li class="menu-item" id="create-meetup"><a href="#">create meetup</a></li>
+                    <li class="menu-item" id="create-meetup"><a href="newmeetup.html">create meetup</a></li>
                     <li class="menu-item" id="scout"><a href="#">scout </a></li>
                     <li class="menu-item" id="signup"><a href="#">signup</a></li>
 
