[starts #162798694] add admin dashboard

--- a/ui/newmeetup.html
+++ b/ui/newmeetup.html
@@ -66,7 +66,7 @@
                 </div>
 
                 <div class="form-item">
-                    <label>Starts</label>
+                    <label> Starts</label>
                 </div>
 
                 <div class="form-item">
@@ -81,7 +81,7 @@
                     <input type="time" name="end-time">
                 </div>
                 <div class="form-item">
-                    <button id="submit-btn" type="submit">create</button>
+                    <button id="btn-primary" type="submit">create</button>
                 </div>
 
             </form>
