change dashboard and form.css

--- a/ui/dashboard.html
+++ b/ui/dashboard.html
@@ -64,7 +64,7 @@
                 <tbody>
                     <tr>
                         <a href="#">
-                            <td>GDG</td>
+                            <td><a href="#">GDG</a></td>
                         </a>
                         <td>168</td>
                         <td> 10</td>
@@ -77,16 +77,16 @@
                                 <a href="#">Delete meetup</a>
                                 <a href="#">Update meetup</a>
                             </div>
-                            <!-- <span onclick="myFunction()" class="dropdown-btn"><i  class="fa fa-ellipsis-v"></i></span>
-                                <div id="myDropdown" class="dropdown-content">
-                                    <a href="#">Delete meetup</a>
-                                    <a href="#">Update meetup</a>
-                                </div> -->
+
                         </td>
                     </tr>
                 </tbody>
             </table>
+            <!-- link for creating a new meetup -->
+            <div><a href="newmeetup.html">Create new meetup</a></div>
+            <!-- end of link -->
         </div>
+
         <!-- End of table -->
         <div></div>
     </div>
