[starts #162661525] add meetup details

--- a/ui/dashboard.html
+++ b/ui/dashboard.html
@@ -64,7 +64,7 @@
                 <tbody>
                     <tr>
                         <a href="#">
-                            <td><a href="#">GDG</a></td>
+                            <td><a href="meetup_detail.html">GDG</a></td>
                         </a>
                         <td>168</td>
                         <td> 10</td>
