--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -10,8 +10,8 @@
     <link rel="stylesheet" type="text/css" media="screen" href="ui/public/stylesheets/meetup.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="ui/public/stylesheets/form.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="ui/public/stylesheets/utils.css" />
-
-
+    <link href="https://fonts.googleapis.com/css?family=Lato:100,100italic,300,300italic,regular,italic,700,700italic,900,900italic" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Quicksand:300,regular,500,700" rel="stylesheet" />
     <!-- <script src="main.js"></script> -->
 </head>
 
@@ -29,7 +29,7 @@
                         <input type="text" size="40" class="search-input" placeholder="search...">
                     </li>
 
-                    <li class="menu-item" id="create-meetup"><a href="newmeetup.html">create meetup</a></li>
+                    <li class="menu-item" id="create-meetup"><a href="ui/newmeetup.html">create meetup</a></li>
                     <li class="menu-item" id="scout"><a href="#">scout </a></li>
                     <li class="menu-item" id="signup"><a href="ui/signup.html">signup</a></li>
 
@@ -49,45 +49,87 @@
         </div>
     </section>
     <!-- End of hero -->
-
+    <div>
+        <h2 id="title-meetups">Upcoming meetups</h2>
+    </div>
     <main id="content">
+
         <div class="card">
-            <h2>great day</h2>
-            <p>Using color to add meaning only provides a visual indication.</p>
+            <div><img id="event-image" src="ui/public/images/gdg2.jpeg"></div>
+            <div class="card-description">
+                <h2 class="card-title">great day</h2>
+                <p>Using color to add meaning only provides a visual indication.</p>
+            </div>
         </div>
+
         <div class="card">
-            <h2>good day</h2>
-            <p>which will not be conveyed to users of assistive technologies.</p>
+            <div><img id="event-image" src="ui/public/images/gdg2.jpeg"></div>
+            <div class="card-description">
+                <h2 class="card-title">great day</h2>
+                <p>Using color to add meaning only provides a visual indication.</p>
+            </div>
         </div>
+
         <div class="card">
-            <h2>good friend</h2>
-            <p>In need of a button, but not the hefty background colors they bring?</p>
+            <div><img id="event-image" src="ui/public/images/gdg2.jpeg"></div>
+            <div class="card-description">
+                <h2 class="card-title">great day</h2>
+                <p>Using color to add meaning only provides a visual indication.</p>
+            </div>
         </div>
+
         <div class="card">
-            <h2>How are you</h2>
-            <p>Using color to add meaning only provides a visual indication.</p>
+            <div><img id="event-image" src="ui/public/images/gdg2.jpeg"></div>
+            <div class="card-description">
+                <h2 class="card-title">great day</h2>
+                <p>Using color to add meaning only provides a visual indication.</p>
+            </div>
         </div>
+
         <div class="card">
-            <h2>I am fine</h2>
-            <p>which will not be conveyed to users of assistive technologies.</p>
+            <div><img id="event-image" src="ui/public/images/gdg2.jpeg"></div>
+            <div class="card-description">
+                <h2 class="card-title">great day</h2>
+                <p>Using color to add meaning only provides a visual indication.</p>
+            </div>
         </div>
+
         <div class="card">
-            <h2>Sing well</h2>
-            <p>In need of a button, but not the hefty background colors they bring?</p>
+            <div><img id="event-image" src="ui/public/images/gdg2.jpeg"></div>
+            <div class="card-description">
+                <h2 class="card-title">great day</h2>
+                <p>Using color to add meaning only provides a visual indication.</p>
+            </div>
         </div>
+
         <div class="card">
-            <h2>congratulate her</h2>
-            <p>Using color to add meaning only provides a visual indication.</p>
+            <div><img id="event-image" src="ui/public/images/gdg2.jpeg"></div>
+            <div class="card-description">
+                <h2 class="card-title">great day</h2>
+                <p>Using color to add meaning only provides a visual indication.</p>
+            </div>
         </div>
+
         <div class="card">
-            <h2>Greet them</h2>
-            <p>which will not be conveyed to users of assistive technologies.</p>
+            <div><img id="event-image" src="ui/public/images/gdg2.jpeg"></div>
+            <div class="card-description">
+                <h2 class="card-title">great day</h2>
+                <p>Using color to add meaning only provides a visual indication.</p>
+            </div>
         </div>
+
         <div class="card">
-            <h2>Go ahead</h2>
-            <p>In need of a button, but not the hefty background colors they bring?</p>
+            <div><img id="event-image" src="ui/public/images/gdg2.jpeg"></div>
+            <div class="card-description">
+                <h2 class="card-title">great day</h2>
+                <p>Using color to add meaning only provides a visual indication.</p>
+            </div>
         </div>
+
     </main>
+    <div>
+        <a id="see-more-btn" class="button" href="#"> more</a>
+    </div>
 </body>
 
 </html>
