fix and correct form for creating new meetup

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>Questioner</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="ui/public/stylesheets/header.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="ui/public/stylesheets/meetup.css" />
@@ -26,7 +26,7 @@
                         <a href="index.html" id="logo">Questioner</a>
                     </li>
                     <li class="menu-item" id="search">
-                        <input type="text" size="40" class="search-input" placeholder="search...">
+                        <input type="text" size="40" class="search-input" placeholder="Search...">
                     </li>
 
                     <li class="menu-item" id="create-meetup"><a href="ui/newmeetup.html">create meetup</a></li>
