--- a/ui/newmeetup.html
+++ b/ui/newmeetup.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" type="text/css" media="screen" href="public/stylesheets/meetup.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="public/stylesheets/form.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="public/stylesheets/utils.css" />
+    <link href="https://fonts.googleapis.com/css?family=Lato:100,100italic,300,300italic,regular,italic,700,700italic,900,900italic" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Quicksand:300,regular,500,700" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <!-- <script src="main.js"></script> -->
@@ -28,14 +30,14 @@
                         <a href="../index.html" id="logo">Questioner</a>
                     </li>
                     <li class="menu-item" id="search">
-                        <input type="text" size="40" class="search-input" placeholder="search...">
+                        <input type="text" size="40" class="search-input" placeholder="Search...">
                     </li>
 
                     <li class="menu-item" id="create-meetup"><a href="newmeetup.html">create meetup</a></li>
                     <li class="menu-item" id="scout"><a href="#">scout </a></li>
                     <li class="menu-item" id="signup"><a href="signup.html">signup</a></li>
 
-
+                </div>
             </ul>
         </nav>
     </header>
