--- a/ui/signup.html
+++ b/ui/signup.html
@@ -10,15 +10,14 @@
     <link rel="stylesheet" type="text/css" media="screen" href="public/stylesheets/meetup.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="public/stylesheets/form.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="public/stylesheets/utils.css" />
+    <link href="https://fonts.googleapis.com/css?family=Lato:100,100italic,300,300italic,regular,italic,700,700italic,900,900italic" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Quicksand:300,regular,500,700" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
     <!-- <script src="main.js"></script> -->
-    <!-- internal css -->
-    <style>
-        body {
-            background-color: rgba(63, 63, 70, 0.336);
-        }
-    </style>
+
+
 </head>
 
 <body>
@@ -57,10 +56,10 @@
             <a class="btn-lg" id="google-link" href="#">Connect with Google </a>
             <form>
                 <fieldset>
-                    <legend>Email </legend>
+                    <legend>OR </legend>
                     <input type="email" size="30" placeholder="Email Address" required/>
                     <input type="password" size="30" placeholder="Password" required/>
-                    <a href="profile.html"> <button id="signbutton">submit</button></a>
+                    <a href="profile.html"> <button id="btn-primary">submit</button></a>
                 </fieldset>
                 <a class="link" href="signin.html">sign in</a>
                 <a class="link" href="#">reset password</a>
