--- a/ui/meetup_detail.html
+++ b/ui/meetup_detail.html
@@ -11,10 +11,17 @@
     <link rel="stylesheet" type="text/css" media="screen" href="public/stylesheets/form.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="public/stylesheets/utils.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="public/stylesheets/meetup_detail.css" />
+    <link href="https://fonts.googleapis.com/css?family=Lato:100,100italic,300,300italic,regular,italic,700,700italic,900,900italic" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Quicksand:300,regular,500,700" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <!-- <script src="main.js"></script> -->
     <!-- internal css -->
+    <style>
+        body {
+            background-color: #ddd;
+        }
+    </style>
 
 </head>
 
@@ -68,7 +75,7 @@
             <div class="meetup_questions_container">
                 <div></div>
                 <div id="top_meetup_questions">
-                    <h3>Top questions</h3>
+                    <h3>Top Questions</h3>
                     <div class="question_card">
                         <div>
                             <p>Q1: How can I convert a monolith application to ...<a href="#">see more</a></p>
