--- a/ui/newmeetup.html
+++ b/ui/newmeetup.html
@@ -16,7 +16,11 @@
 
     <!-- <script src="main.js"></script> -->
     <!-- internal css -->
-
+    <style>
+        body {
+            background-color: #ddd;
+        }
+    </style>
 </head>
 
 <body>
@@ -83,7 +87,7 @@
                     <input type="time" name="end-time">
                 </div>
                 <div class="form-item">
-                    <button id="btn-primary" type="submit">create</button>
+                    <button class="btn-primary" type="submit">create</button>
                 </div>
 
             </form>
