--- a/ui/signup.html
+++ b/ui/signup.html
@@ -54,12 +54,12 @@
             <h2>Sign Up</h2>
             <a class="btn-lg" id="facebook-link" href="#">Connect with Facebook</a>
             <a class="btn-lg" id="google-link" href="#">Connect with Google </a>
-            <form>
+            <form action="userprofile.html">
                 <fieldset>
                     <legend>OR </legend>
                     <input type="email" size="30" placeholder="Email Address" required/>
                     <input type="password" size="30" placeholder="Password" required/>
-                    <a href="profile.html"> <button id="btn-primary">submit</button></a>
+                    <a href="profile.html"> <button class="btn-primary">submit</button></a>
                 </fieldset>
                 <a class="link" href="signin.html">sign in</a>
                 <a class="link" href="#">reset password</a>
