--- a/ui/signin.html
+++ b/ui/signin.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>Questioner</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="public/stylesheets/header.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="public/stylesheets/meetup.css" />
@@ -53,12 +53,12 @@
             <h2>Sign In</h2>
             <a class="btn-lg" id="facebook-link" href="#">Connect with Facebook</a>
             <a class="btn-lg" id="google-link" href="#">Connect with Google </a>
-            <form>
+            <form action="userprofile.html">
                 <fieldset>
                     <legend>OR </legend>
                     <input type="email" size="30" placeholder="Email Address" required/>
                     <input type="password" size="30" placeholder="Password" required/>
-                    <a href="profile.html"><button id="btn-primary">submit</button></a>
+                    <button class="btn-primary">submit</button>
                 </fieldset>
                 <a class="link" href="signup.html">sign up</a>
                 <a class="link" href="#">reset password</a>
