[starts #163097368] edit signup page

--- a/index.html
+++ b/index.html
@@ -22,16 +22,10 @@
             <ul>
                 <div id="container">
 
-                    <li class="menu-item">
+                    <li class="menu-item flex2">
                         <a href="index.html" id="logo">Questioner</a>
                     </li>
-                    <li class="menu-item" id="search">
-                        <input type="text" size="40" class="search-input" placeholder="Search...">
-                    </li>
-
-                    <li class="menu-item" id="create-meetup"><a href="ui/newmeetup.html">create meetup</a></li>
-                    <li class="menu-item" id="scout"><a href="#">scout </a></li>
-                    <li class="menu-item" id="signup"><a href="ui/signup.html">signup</a></li>
+                    <li class="menu-item flex2" id="signup"><a id="link" href="ui/signup.html">signup</a></li>
 
                 </div>
             </ul>
@@ -53,30 +47,6 @@
         <h2 id="title-meetups">Upcoming meetups</h2>
     </div>
     <main id="content">
-
-        <div class="card">
-            <div><img id="event-image" src="ui/public/images/gdg2.jpeg"></div>
-            <div class="card-description">
-                <h2 class="card-title">great day</h2>
-                <p>Using color to add meaning only provides a visual indication.</p>
-            </div>
-        </div>
-
-        <div class="card">
-            <div><img id="event-image" src="ui/public/images/gdg2.jpeg"></div>
-            <div class="card-description">
-                <h2 class="card-title">great day</h2>
-                <p>Using color to add meaning only provides a visual indication.</p>
-            </div>
-        </div>
-
-        <div class="card">
-            <div><img id="event-image" src="ui/public/images/gdg2.jpeg"></div>
-            <div class="card-description">
-                <h2 class="card-title">great day</h2>
-                <p>Using color to add meaning only provides a visual indication.</p>
-            </div>
-        </div>
 
         <div class="card">
             <div><img id="event-image" src="ui/public/images/gdg2.jpeg"></div>
